src/com/company/Lang.g4
grammar Lang;

goal : mainClass ;
mainClass : 'class' mainClassName '{' 'public' 'main' '(' 'string' '[' ']' args ')' '{' program '}' '}';
mainClassName : ID ;
args : ID ;

program : statement+ ;
statement : let | print | increment;

increment: ID '++' ';';
let : ID '=' INT ';';
print : 'screen' '(' (INT | ID) ')' ';';

ID : [a-zA-Z]+ ;
INT : [0-9]+ ;
WS : [ \n\t\r]+ -> skip;
